--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <nav class="max-w-4xl mx-auto px-6 py-4 bg-green-500 flex justify-between">
+    <nav class="max-w-4xl mx-auto px-6 py-4 bg-indigo-300 flex justify-between">
         <div class="logo">
             <a href="{% url 'frontpage' %}">Bookstore&trade;</a>
         </div>
