--- a/core/templates/core/frontpage.html
+++ b/core/templates/core/frontpage.html
@@ -9,10 +9,19 @@
     <h1 class="text-2xl">List of all books</h1>
     <hr>
 
-    {% for book in books %}
+    <div class="flex flex-wrap">
+        {% for book in books %}
+            <div class="book w-1/3 p-2">
+                <div class="bg-gray-200 p-4">
 
-        <h2> {{ book.title }} </h2>
-
-    {% endfor %}
+                    <a href="{% url 'book-detail' book.slug%}">
+                        <h2 class="text-xl "> {{ book.title }} </h2>
+                        <p class="text-xs text-gray-600">${{ book.get_display_price }}</p>
+                        <em class="text-xs text-gray-600 ">Posted on {{ book.created_at|timesince }} </em>
+                    </a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
