--- a/store/templates/store/category_detail.html
+++ b/store/templates/store/category_detail.html
@@ -1,12 +1,12 @@
-<!-- serves as a landing page -->
+<!-- serves as another pagee -->
 
 {% extends 'core/base.html' %}
 
-{% block title %} Frontpage {% endblock %}
+{% block title %} {{category.title}} {% endblock %}
 
 {% block content %}
 
-    <h1 class="text-2xl">List of all books</h1>
+    <h1 class="text-2xl"> {{category.title}} </h1>
     <hr>
 
     <div class="flex flex-wrap">
@@ -14,7 +14,7 @@
             <div class="book w-1/3 p-2">
                 <div class="bg-gray-200 p-4">
 
-                    <a href="{% url 'book-detail' book.category.slug book.slug %}">
+                    <a href="{% url 'book-detail' book.category.slug book.slug%}">
                         <h2 class="text-xl "> {{ book.title }} </h2>
                         <p class="text-xs text-gray-600">${{ book.get_display_price }}</p>
                         <em class="text-xs text-gray-600 ">Posted on {{ book.created_at|timesince }} </em>
